possibly fix image stretch

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -1,12 +1,17 @@
-#banner {
-    margin: 3%;
+#banner-box {
     display: flex;
     align-content: center;
     justify-content: center;
 }
 
-#banner img {
+#banner {
+    margin: 3%;
     width: 60%;
+}
+
+#banner img {
+    width: 100%;
+    height: auto;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
